--- a/views/event.ejs
+++ b/views/event.ejs
@@ -54,7 +54,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href="event_detail_tea_set"><img src="../Img/hotel_plan_20220513113105_lg_pc.jpg" alt=""></a>
+                            <a href="event_detail_tea_set"><img src="../img/hotel_plan_20220513113105_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Summer Blue Afternoon Tea Set</figcaption>
@@ -96,7 +96,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../Img/hotel_plan_20200701173926_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../img/hotel_plan_20200701173926_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Oak Room Jazz Night</figcaption>
@@ -110,7 +110,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../Img/hotel_plan_20220401152403_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../img/hotel_plan_20220401152403_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Australian Wine Promotion</figcaption>
@@ -138,7 +138,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../Img/hotel_plan_20220404180725_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../img/hotel_plan_20220404180725_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Bistro 50, Special Pairing Set</figcaption>
@@ -152,7 +152,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../Img/hotel_plan_20210209114614_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../img/hotel_plan_20210209114614_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Gourmet To Go at Cilantro Deli</figcaption>
@@ -166,7 +166,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../Img/hotel_plan_20210517123844_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../img/hotel_plan_20210517123844_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Teppanyaki Special Course</figcaption>
@@ -188,4 +188,4 @@
             </div>
         </section>
     </main>
-    <script src="../JS/event.js"></script>
+    <script src="../js/event.js"></script>
