--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -237,7 +237,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <%- script %>
     <script src="../js/calendar.js"></script>
-    <script src="../JS/common.js"></script>
+    <script src="../js/common.js"></script>
     <script src="../js/footer.js"></script>
 </body>
 </html>
