--- a/views/main.ejs
+++ b/views/main.ejs
@@ -278,7 +278,7 @@
             <figure id="Executive" class="tabcontent"></figure>
             <figure id="ExecutiveM" class="tabcontent"></figure>
             <figure id="Suite" class="tabcontent"></figure>
-            <span><a href="">더보기</a></span>
+            <span><a href="/room">더보기</a></span>
         </article>
         <article class="main_roomtypeM">
             <span class="main_arrowM main_arrowL" onclick="plusSlides3(-1)"></span>
@@ -439,7 +439,7 @@
                     </div>
                 </a></li>
             </ul>
-            <span><a href="">더보기</a></span>
+            <span><a href="event">더보기</a></span>
         </article>
     </section>
     <section class="main_w1200">
