--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
                         </a>
                     </div>
                     <div class="l_txt">
-                        <p><a href="/join">JOIN US </a></p>
+                        <p><a href="/join_agree">JOIN US </a></p>
                         <span> | </span>
                         <p><a href="">FIND ID and PASSWORD</a></p>
                     </div>
