--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,11 +39,7 @@
                     <div class="main_checkin">
                         <h6>체크인</h6>
                         <div>
-                            <div>
-                                <p>05월</p>
-                                <p>(금)</p>
-                            </div>
-                            <h5>13</h5>
+                            <input id="main_IN" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                     <span>
@@ -52,11 +48,7 @@
                     <div class="main_checkout">
                         <h6>체크아웃</h6>
                         <div>
-                            <div>
-                                <p>05월</p>
-                                <p>(토)</p>
-                            </div>
-                            <h5>14</h5>
+                            <input id="main_OUT" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                 </li>
@@ -278,7 +270,7 @@
             <figure id="Executive" class="tabcontent"></figure>
             <figure id="ExecutiveM" class="tabcontent"></figure>
             <figure id="Suite" class="tabcontent"></figure>
-            <span><a href="/room">더보기</a></span>
+            <span><a href="room">더보기</a></span>
         </article>
         <article class="main_roomtypeM">
             <span class="main_arrowM main_arrowL" onclick="plusSlides3(-1)"></span>
@@ -348,7 +340,7 @@
                 <li id="promo_navDIN" class="promo_navli">DINING</li>
             </ul>
             <ul class="promo_Pri">
-                <li class="promo_content promo_PriL promo_PrALL"><a href="">
+                <li class="promo_content promo_PriL promo_PrALL"><a href="event_detail_pic">
                     <figure class="promo_Pri_img2">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -357,7 +349,7 @@
                         <h5>70,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriD promo_PrALL"><a href="">
+                <li class="promo_content promo_PriD promo_PrALL"><a href="event_detail_tea_set">
                     <figure class="promo_Pri_img1">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -366,7 +358,7 @@
                         <h5>49,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriD promo_PrALL"><a href="">
+                <li class="promo_content promo_PriD promo_PrALL"><a href="event">
                     <figure class="promo_Pri_img3">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -375,7 +367,7 @@
                         <h5>65,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriD promo_PrALL"><a href="">
+                <li class="promo_content promo_PriD promo_PrALL"><a href="event">
                     <figure class="promo_Pri_img5">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -384,7 +376,7 @@
                         <h5>49,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriD promo_PrALL"><a href="">
+                <li class="promo_content promo_PriD promo_PrALL"><a href="event">
                     <figure class="promo_Pri_img4">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -393,7 +385,7 @@
                         <span>SPECIAL PRICE</span>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriL"><a href="">
+                <li class="promo_content promo_PriL"><a href="event">
                     <figure class="promo_Pri_img6">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -402,7 +394,7 @@
                         <span>SPECIAL PRICE</span>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriL"><a href="">
+                <li class="promo_content promo_PriL"><a href="event">
                     <figure class="promo_Pri_img7">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -411,7 +403,7 @@
                         <h5>280,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriL"><a href="">
+                <li class="promo_content promo_PriL"><a href="event">
                     <figure class="promo_Pri_img8">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -420,7 +412,7 @@
                         <h5>250,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriL"><a href="">
+                <li class="promo_content promo_PriL"><a href="event">
                     <figure class="promo_Pri_img9">
                     </figure>
                     <div class="promo_Pri_txt">
@@ -429,7 +421,7 @@
                         <h5>90,000 WON</h5>
                     </div>
                 </a></li>
-                <li class="promo_content promo_PriD"><a href="">
+                <li class="promo_content promo_PriD"><a href="event">
                     <figure class="promo_Pri_img10">
                     </figure>
                     <div class="promo_Pri_txt">
