--- a/views/notice_deta.ejs
+++ b/views/notice_deta.ejs
@@ -67,7 +67,7 @@
                     </p>
                 </article>
             </form>
-            <div>
+            <div class="notice_btn1">
                 <input
                   type="button"
                   onclick="javascript:location.href='/updatenoti?id=<%=row.id%>'"
